--- a/assets/tab.html
+++ b/assets/tab.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="popup.bundle.js"></script>
+    <script src="tab.bundle.js"></script>
     <script src="vendors.bundle.js"></script>
     <link rel="stylesheet" href="tab.css" />
   </head>
