chore: add 'elvenassist-' prefix to all script names for due disclosure

--- a/assets/popup.html
+++ b/assets/popup.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <title>Mandarin Blueprint Props</title>
-    <script src="vendors.bundle.js"></script>
-    <script src="popup.bundle.js"></script>
+    <script src="elvenassist-vendors.bundle.js"></script>
+    <script src="elvenassist-popup.bundle.js"></script>
     <link rel="stylesheet" href="popup.css">
   </head>
   <body>
