--- a/assets/tab.html
+++ b/assets/tab.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="vendors.bundle.js"></script>
-    <script src="tab.bundle.js"></script>
+    <script src="elvenassist-vendors.bundle.js"></script>
+    <script src="elvenassist-tab.bundle.js"></script>
     <link rel="stylesheet" href="tab.css" />
   </head>
   <body>
