feat: isometric view (experimental)

--- a/assets/tab.html
+++ b/assets/tab.html
@@ -8,7 +8,7 @@
     <script src="elvenassist-tab.bundle.js"></script>
     <link rel="stylesheet" href="tab.css" />
   </head>
-  <body>
+  <body style="overflow-y: scroll;">
     <div class="container">
       <div id="root">...</div>
     </div>
